# YBOS

./: .gitignore  Cargo.toml  Cross.toml  README.md  YBOSClaude.md
.github/workflows/: ci.yml
calendar/: Cargo.toml
calendar/src/: lib.rs  mock_store.rs  sqlite_store.rs  trait_def.rs  types.rs
calendar/tests/: mock_smoke.rs  sqlite_smoke.rs
docs/: ARCHITECTURE.md  HARDWARE.md  L0_SACRED.md  ROADMAP.md
firewall/: Cargo.toml
firewall/src/: audit.rs  lib.rs  llm_judge.rs  mock_judge.rs  parse.rs  prompt.rs  trait_def.rs  types.rs
firewall/tests/: integration_test.rs  llm_smoke.rs  mock_smoke.rs
inference/: Cargo.toml  README.md
inference/src/: lib.rs  local_llama.rs  mock.rs  remote_api.rs  trait_def.rs  types.rs
inference/tests/: llama_smoke.rs  mock_smoke.rs
l0/: .gitignore  Cargo.toml  README.md  build.rs  build_android.sh
l0/.cargo/: config.toml
l0/proto/: l0.proto
l0/src/: lib.rs  main.rs
l0/src/bus/: broker.rs  mod.rs  publisher.rs  topics.rs
l0/src/grpc/: convert.rs  identity_service.rs  mod.rs  reflex_service.rs  session_service.rs  telemetry_service.rs
l0/src/hw/: linux.rs  mod.rs  parse.rs
l0/src/identity/: blob.rs  envelope.rs  mod.rs  onboarding.rs  paths.rs  sacred.rs  session.rs
l0/src/reflex/: mod.rs
memory/: Cargo.toml  README.md
memory/src/: fastembed_embedder.rs  lib.rs  mock_embedder.rs  mock_store.rs  sqlite_vec_store.rs  trait_def.rs  types.rs
memory/tests/: fastembed_smoke.rs  mock_smoke.rs
orchestrator/: Cargo.toml  build.rs
orchestrator/proto/: orchestrator.proto
orchestrator/src/: agent.rs  agents.rs  capability.rs  http.rs  l0_client.rs  lib.rs  main.rs  manifest.rs  registry.rs  runtime.rs
orchestrator/src/agents/: calendar.rs  hello.rs  news.rs  trip.rs
orchestrator/src/news/: mod.rs  rss.rs  xml.rs
orchestrator/tests/: calendar_e2e.rs  capability_hardening.rs  end_to_end.rs  news_e2e.rs  trip_e2e.rs
platform/: FLASH_PROCEDURE.md  sync_aosp.sh
platform/aosp_overlay/: apply_overlay.sh
platform/aosp_overlay/device/ybos/common/: BoardConfigCommon.mk  init.ybos.rc  system.prop
platform/aosp_overlay/device/ybos/common/sepolicy/: ybos_l0.te
platform/build_host/: README.md  setup_ubuntu.sh
platform/manifests/: ybos-aosp.xml
proto/: Cargo.toml  README.md  build.rs
proto/proto/: l0.proto
proto/src/: lib.rs
reference/: PORT_NOTES.md  REMUS_PORT_NOTES.md
user-context/: Cargo.toml
user-context/src/: lib.rs  mock_store.rs  sqlite_store.rs  trait_def.rs  types.rs
user-context/tests/: mock_smoke.rs  sqlite_smoke.rs
