[workspace]
members = ["l0", "orchestrator"]
resolver = "2"

[workspace.dependencies]
# shared deps with single versions
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.12"
prost = "0.13"
hex = "0.4"
sha2 = "0.10"
