[package]
name = "ybos-firewall"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { workspace = true }
tracing = { workspace = true }
ybos-inference = { path = "../inference" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
