[package]
name = "ybos-l0"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["POPA GEORGE CRISTIAN"]
description = "YBOS L0 — The Reflex Layer (kernel-adjacent daemon, per-user identity)"
license = "Proprietary"
publish = false

[[bin]]
name = "ybos-l0"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util", "sync"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization (config, identity blob payload, MQTT JSON payloads)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto (Y1 — identity enrollment, envelope A, BIP39, session tokens)
argon2 = "0.5"
bip39 = "2"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

# MQTT (S6.3) — broker embedded + client local pentru publish
rumqttd = "0.20"
rumqttc = "0.25"

# gRPC (S6.4) — server tonic + codegen prost
tonic = "0.12"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

[build-dependencies]
# Codegen pentru proto/l0.proto la build time.
tonic-build = "0.12"
# Protoc binary vendat — nu cere user-ului sa-l instaleze separat pe Win.
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "test-util"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
