[package]
name = "ybos-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
ybos-proto = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
path-clean = "1.0.1"
toml = "0.8"
async-trait = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6"
http-body-util = "0.1"
bytes = "1"
http = "1"
ybos-inference = { path = "../inference" }
ybos-memory = { workspace = true }
ybos-user-context = { path = "../user-context" }
ybos-calendar = { path = "../calendar" }

[features]
real_rss = []
calendar_sqlite = ["ybos-calendar/sqlite"]
sqlite_vec = ["ybos-memory/sqlite_vec"]
fastembed = ["ybos-memory/fastembed"]
user_context_sqlite = ["ybos-user-context/sqlite"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "test-util"] }
ybos-l0 = { path = "../l0", features = ["dev_test_init"] }
# tokio-stream is only used by the end_to_end integration test (TcpListenerStream).
tokio-stream = { version = "0.1", features = ["net"] }
